:sparkles:Use image placeholder to avoid content jumping

--- a/src/components/PropertyOverview.css
+++ b/src/components/PropertyOverview.css
@@ -1,17 +1,11 @@
 .prop-overview {
     overflow: hidden;
-    border-width: 0 ;
+    border-width: 0;
 }
 
 .prop-overview .prop-img{
-    padding: 0;
-    margin: 0;
-    background-color: gray;
-    width: 100%;
     border-radius: 4px;
     overflow: hidden;
-    min-height: 80px;
-
 }
 
 .prop-overview .prop-img img {
@@ -44,17 +38,15 @@
     font-weight: 500;
 }
 
-.prop-overview .prop-location i{
+.prop-overview .prop-location i {
     font-size: 15px;
     color: gray;
 }
 
-.prop-overview .prop-rating{
+.prop-overview .prop-rating {
     position: relative;
     right: 3px;
 }
-
-
 
 /* Property Slider Overview */
 
@@ -62,10 +54,10 @@
     overflow: hidden;
     /* border-radius: 30px; */
     /* border: 1px solid #dddddd; */
-    border-width: 0 ;
+    border-width: 0;
 }
 
-.prop-slider-overview .prop-img{
+.prop-slider-overview .prop-img {
     padding: 0;
     margin: 0;
     background-color: gray;
@@ -101,17 +93,16 @@
     border-radius: 5px;
 }
 
-.prop-slider-overview .prop-location, 
-.prop-slider-overview .prop-price {
+.prop-slider-overview .prop-location, .prop-slider-overview .prop-price {
     font-weight: 500;
 }
 
-.prop-slider-overview .prop-location i{
+.prop-slider-overview .prop-location i {
     font-size: 15px;
     color: gray;
 }
 
-.prop-slider-overview .prop-rating{
+.prop-slider-overview .prop-rating {
     position: relative;
     right: 3px;
 }
